--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -4,3 +4,33 @@
     margin: 10px; 
     border-radius: 10px
 }
+
+body {
+    font-family: Arial, sans-serif;
+}
+
+header {
+    padding: 20px;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+
+#logo {
+    transition: all 0.3s ease;
+}
+
+#logo img {
+    width: 150px;
+    transition: opacity 0.3s ease;
+}
+
+#logo-text {
+    font-size: 24px;
+    font-weight: bold;
+    display: none; /* Comienza oculto */
+}
+
